# hydroserver

./: .gitignore  CONTRIBUTING.md  LICENSE  MANUAL_RELEASE_TESTING_CHECKLIST.md  README.md  env.d.ts  eslint.config.js  package-lock.json  package.json  playwright.config.ts  qc-history-v3.md  requirements.txt  setup.cfg  tsconfig.app.json  vite.config.ts
.claude/: launch.json
.github/DISCUSSION_TEMPLATE/: feature-requests.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.yml  config.yml  (+1 more)
deploy/: README.md
django/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pytest.ini  requirements.txt
docker/: hydroserver-local-template.yml  hydroserver-local.yml  setup.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  CALIBRATION.md  DEPLOYMENT.md  HISTORY_SCRIPT.md  ONBOARDING.md  PERFORMANCE.md  PLOTTING.md  QC_HISTORY.md  QUALITY.md  TESTING.md  USER_GUIDE.md  index.md
e2e/: all-operations.spec.ts  edit-add-points.spec.ts  edit-change-values.spec.ts  edit-delete-points.spec.ts  edit-fill-gaps.spec.ts  filter-change.spec.ts  filter-datetime-range.spec.ts  filter-gaps.spec.ts  filter-persistence.spec.ts  filter-range-toggle.spec.ts  filter-rate-of-change.spec.ts  filter-value-threshold.spec.ts  history.spec.ts  navigation.spec.ts  plot-no-intended-spacing.spec.ts  qc-golden-path.spec.ts  qc-script.spec.ts  screenshots.spec.ts  share-url.spec.ts  smoke.spec.ts  tooltip-threshold.spec.ts
hydroserver/: settings.py
scripts/: dev-api-command  dev-django-tailwind  e2e  ensure-dev-oidc-key  release-test
src/: App.vue  main.ts
(+1564 files in other folders)
