[metadata]
name = hydroserverpy
version = 1.9.0b3
description = A Python client for managing HydroServer data
long_description_content_type = text/markdown
long_description = file: README.md

[options]
package_dir=
    =src
packages = find:
zip_safe = True
python_requires = >=3.9, <4
install_requires =
    requests >= 2
    pydantic >= 2.6
    pydantic[email] >= 2.6
    pandas >= 2.1
    numpy >= 1.22.4
    pyyaml >= 5
    simplejson >= 3
    python-crontab >= 3
    python-dateutil >= 2.8.2
    croniter >= 2.0.1
    jmespath >= 1.0.1

[options.extras_require]
docs =
    sphinx_autodoc_typehints

[options.packages.find]
where=src
